k8s-configs/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-custom-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: my-container
          imagePullPolicy: Always
          image: ravindrasingh6969/my-app:latest
          ports:
            - containerPort: 80
