k8s-configs/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo
annotations:
  kubernetes.io/ingress.class: traefik
  nginx.ingress.kubernetes.io/ssl-redirect: false
spec:
  rules:
    - host: nginx.kbnhvn-project.eu
      http:
        paths:
          - path: /
            pathType: Prefix
          - backend:
              service:
                name: app-service
                port:
                  number: 80
